Code refactor
Refactor archive management